test2-2023-09-19.log
regress/test2.fir:247424:17: error: use of unknown declaration 'validif'
    tmp20070 <= validif(head(UInt<3>(6), 1), SInt<24>("b-11111101000010001010101"))
                ^
===-------------------------------------------------------------------------===
                         ... Execution time report ...
===-------------------------------------------------------------------------===
  Total Execution Time: 1.6859 seconds

  ----Wall Time----  ----Name----
    1.6832 ( 99.8%)  FIR Parser
    0.0000 (  0.0%)    Parse annotations
    0.0000 (  0.0%)    Parse OMIR
    1.5883 ( 94.2%)    Parse modules
    0.0027 (  0.2%)  Rest
    1.6859 (100.0%)  Total

{
  totalTime: 1.7,
  maxMemory: 172683264
}
